--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   ],
   "dependencies": {
     "ar-drone": "0.3.1",
-    "express": "3.0.x",
-    "ejs": "~0.8.3",
-    "socket.io": "~0.9.4",
-    "dronestream": "1.1.1",
+    "buffered-reader": "~1.0.1",
     "dateformat": "~1.0.6-1.2.3",
+    "dronestream": "1.1.1",
+    "ejs": "~0.8.3",
+    "express": "3.0.x",
     "line-reader": "~0.2.3",
-    "buffered-reader": "~1.0.1"
+    "socket.io": "~0.9.4",
+    "three": "0.68.0"
   },
   "author": "Logan Allen, Henry Boldiszar, Chen Ye",
-  "contributors": [
-  ],
+  "contributors": [],
   "license": "MIT"
 }
