--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "ardrone-webflight",
   "dependencies": {
-    "jquery": "~1.9.1",
-    "bootstrap.css": "~2.1.1"
+    "jquery": "~1.9.1"
   }
 }
